src1/objects/District__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>State__r.Country__r.Name &amp; &quot;-&gt;&quot; &amp; State__r.Name&amp; &quot;-&gt;&quot; &amp;Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Pin_Code__c</fullName>
        <label>District Pin Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>District</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>